--- a/Web/src/app/components/account/change-password/change-password.component.html
+++ b/Web/src/app/components/account/change-password/change-password.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center">
-  <inheritance-input #CurrentPassword [options]="getCurrentPasswordOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+  <inheritance-input #CurrentPassword [options]="getCurrentPasswordOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
     [value]="changePasswordRequest.currentPassword" (onChange)="changePasswordRequest.currentPassword = $event"></inheritance-input>
-  <inheritance-input #NewPassword [options]="getNewPasswordOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+  <inheritance-input #NewPassword [options]="getNewPasswordOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
     [value]="changePasswordRequest.newPassword" (onChange)="changePasswordRequest.newPassword = $event"></inheritance-input>
   <button class="btn-save btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
 </div>
