--- a/Web/src/app/components/account/forgot-password/forgot-password.component.html
+++ b/Web/src/app/components/account/forgot-password/forgot-password.component.html
@@ -1,13 +1,17 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
-  <p>Please fill your email used to register on the platform.</p>
-  <inheritance-input #Email [options]="getEmailOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+  <p class="subtitle">Please enter the email address used to register. Subsequently you will get a recovery email, to restore your password.</p>
+  <inheritance-input #Email [options]="getEmailOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
     [value]="forgotPasswordRequest.email" (onChange)="forgotPasswordRequest.email = $event"></inheritance-input>
 </div>
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
   <recaptcha #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
   <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
 </div>
-<div class="link-div" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
-  <a class="modal-link" (click)="onSignUpClick()">I don't have an account</a>
-  <a class="modal-link" (click)="onLoginClick()">I have an account. Go to Login</a>
+<div class="link-div links-container" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
+  <div>
+      I have an account. <a class="modal-link" (click)="onLoginClick()">Go to login</a>
+  </div>
+  <div>
+      I don't have an account. <a class="modal-link" (click)="onSignUpClick()">Go to sign up</a>
+  </div>
 </div>
