--- a/Web/src/app/components/account/entry-option/entry-option.component.html
+++ b/Web/src/app/components/account/entry-option/entry-option.component.html
@@ -2,14 +2,20 @@
     <p class="header">{{headerFirstMessage}}<br *ngIf="headerSecondMessage.length > 0" />{{headerSecondMessage}}</p>
 </div>
 <div class="div-padding-bottom" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
-    <div class="social-media-button" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" (click)="socialEntry('facebook')"><fa-icon [icon]="['fab','facebook-f']" size="2x" fxLayoutAlign="center stretch"></fa-icon><span>Continue with Facebook</span></div>
-    <div class="social-media-button" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" (click)="socialEntry('facebook')"><fa-icon [icon]="['fab','google']" size="2x" fxLayoutAlign="center stretch"></fa-icon><span>Continue with Google</span></div> 
+    <div class="social-media-button" (click)="socialEntry('facebook')"><fa-icon [icon]="['fab','facebook-f']" size="2x" fxLayoutAlign="center stretch"></fa-icon><span>Continue with Facebook</span></div>
+    <div class="social-media-button" (click)="socialEntry('facebook')"><fa-icon [icon]="['fab','google']" size="2x" fxLayoutAlign="center stretch"></fa-icon><span>Continue with Google</span></div> 
     <p>or</p>
-    <button mat-flat-button ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" (click)="emailClick()">{{emailButtonMessage}}</button> 
+    <button class="large" mat-flat-button (click)="emailClick()">{{emailButtonMessage}}</button> 
 </div>
-<div class="div-padding-bottom" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
-    <a class="modal-link" (click)="onForgotPasswordClick()">I forgot my password</a>
-    <a class="modal-link" *ngIf="!isLogin()" (click)="onLoginClick()">I have an account. Go to Login</a>
-    <a class="modal-link" *ngIf="isLogin()" (click)="onSignUpClick()">I don't have an account</a>
+<div class="div-padding-bottom links-container" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
+    <div>
+        Forgot password? <a class="modal-link" (click)="onForgotPasswordClick()">Click here</a>
+    </div>
+    <div *ngIf="!isLogin()">
+        I have an account. <a class="modal-link" (click)="onLoginClick()">Go to login</a>
+    </div>
+    <div *ngIf="isLogin()">
+        I don't have an account. <a class="modal-link" (click)="onSignUpClick()">Go to sign up</a>
+    </div>
 </div>
     
