--- a/Web/src/app/components/account/forgot-password/forgot-password.component.css
+++ b/Web/src/app/components/account/forgot-password/forgot-password.component.css
@@ -1,3 +1,9 @@
+.subtitle{
+    max-width: 350px;
+    width: calc(100% - 20px);
+    text-align: center;
+}
+
 .link-div {
     padding-top: 20px;
     padding-bottom: 25px;
