--- a/Web/src/app/components/account/login/login.component.html
+++ b/Web/src/app/components/account/login/login.component.html
@@ -1,14 +1,18 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center">
-  <inheritance-input #Email [options]="getEmailOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+  <inheritance-input #Email [options]="getEmailOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
     [value]="loginRequest.email" (onChange)="loginRequest.email = $event"></inheritance-input>
-  <inheritance-input #Password [options]="getPasswordOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+  <inheritance-input #Password [options]="getPasswordOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
     [value]="loginRequest.password" (onChange)="loginRequest.password = $event"></inheritance-input>
 </div>
 <div class="lastDiv" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
   <recaptcha #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
-  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="onLoginClick()" [promiseBtn]="promise">Sign In</button>
+  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="onLoginClick()" [promiseBtn]="promise">Enter</button>
 </div>
-<div class="lastDiv" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
-    <a class="modal-link" (click)="onForgotPasswordClick()">I forgot my password</a>
-    <a class="modal-link" (click)="onRegisterClick()">I don't have an account</a>
+<div class="lastDiv links-container" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
+    <div>
+        Forgot password? <a class="modal-link" (click)="onForgotPasswordClick()">Click here</a>
+    </div>
+    <div>
+        I don't have an account. <a class="modal-link" (click)="onRegisterClick()">Go to sign up</a>
+    </div>
 </div>
