--- a/Web/src/app/components/account/register/register.component.html
+++ b/Web/src/app/components/account/register/register.component.html
@@ -16,8 +16,12 @@
   <mat-checkbox required [(ngModel)]="acceptTermsAndConditions">Agree with all terms</mat-checkbox>
   <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="onCreateAccountClick()" [promiseBtn]="promise">Register</button>
 </div>
-<div class="div-padding-bottom div-padding-top" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
-  <a class="modal-link" (click)="onForgotPasswordClick()">I forgot my password</a>
-  <a class="modal-link" (click)="onLoginClick()">I have an account. Go to Login</a>
+<div class="div-padding-bottom div-padding-top links-container" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
+  <div>
+      Forgot password? <a class="modal-link" (click)="onForgotPasswordClick()">Click here</a>
+  </div>
+  <div>
+      I have an account. <a class="modal-link" (click)="onLoginClick()">Go to login</a>
+  </div>
 </div>
   
