--- a/Web/src/app/components/util/message-fullscreen-modal/message-fullscreen-modal.component.css
+++ b/Web/src/app/components/util/message-fullscreen-modal/message-fullscreen-modal.component.css
@@ -1,12 +1,21 @@
 .message {
     opacity: 0.95;
-    background-color: #101010;
     height: 100%;
-    color: white;
     padding: 25px;
     margin: auto;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: center;
+    color: #191919;
+    border: solid 1px #252525;
+    width: calc(100% - 20px);
+    max-width: 526px !important;
 }
 
+.message > div{
+    min-height: 240px;
+}
+/* 
 .mobile {
     width: 90%;
 }
@@ -17,4 +26,4 @@
 
 .web {
     width: 60%;
-}
+} */
