informative message on expert details when there is no recommendation

--- a/Web/src/app/components/advisor/expert-details/expert-details.component.css
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.css
@@ -145,3 +145,11 @@
 :host ::ng-deep .expert-details-div{
     cursor: default !important;
 }
+
+.no-advices-yet-message{
+    font-size: 28px;
+    font-weight: 400;
+    text-align: center;
+    color: white;
+    margin: 20px;
+}
