--- a/Web/src/app/components/advisor/expert-details/expert-details.component.html
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.html
@@ -15,7 +15,7 @@
           <div class="expert-followers">Followed by {{expert.numberOfFollowers}} {{getInvestorsWordPluralOrSingular()}}</div>
         </div>
         <div fxLayout="row" fxLayoutAlign="end end" fxLayoutGap="10px">
-          <div class="blue-button action-button truncate" *ngIf="showOwnerButton" (click)="onNewAdviceClick()">NEW RATING</div>   
+          <div class="blue-button action-button truncate" *ngIf="showOwnerButton && !noRecommendationsYet()" (click)="onNewAdviceClick()">NEW RATING</div>   
           <div class="blue-button action-button truncate" *ngIf="showOwnerButton" (click)="onEditProfileClick()">EDIT PROFILE</div>     
           <div class="white-button action-button truncate" *ngIf="!showOwnerButton && expert.following" (click)="onUnfollowClick()">
             UNFOLLOW
@@ -128,6 +128,10 @@
             style="overflow: hidden"> 
           </tr>
         </table>
+        <div *ngIf="noRecommendationsYet()" fxLayout="column" fxLayoutAlign="center center">
+          <div class="no-advices-yet-message" [innerHTML]="getNoRecommendationMessage()" ></div>
+          <div class="blue-button action-button" *ngIf="showOwnerButton" (click)="onNewAdviceClick()">NEW RATING</div>
+        </div>
       </div>
     </div>
   </div>
