Set wallet login

--- a/Web/src/app/components/account/message-signature/message-signature.component.html
+++ b/Web/src/app/components/account/message-signature/message-signature.component.html
@@ -70,7 +70,6 @@
   <div class="request-expert" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
     <span>Do you think you can give expert advise to others, or can refer more users. Apply to become a verified expert and get rewarded with AUC.&nbsp;<a class="link-request" (click)="becomeAdvisor()">Request</a></span>
   </div>
-  <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
-    <trending-assets class="width100" [isWalletLogin]="true"></trending-assets>
-  </div>
 </div>
+<advices></advices>
+<trending-assets class="global-container-min inverted" [isWalletLogin]="true"></trending-assets>
