--- a/Web/src/app/components/advisor/advices/advices.component.css
+++ b/Web/src/app/components/advisor/advices/advices.component.css
@@ -5,3 +5,10 @@
 .pagination-link{
     margin-top: 76px;
 }
+
+.blocked-content {
+    height: 300px;
+    position: absolute;
+    z-index: 2;
+    max-width: unset !important;
+}
