--- a/Web/src/app/components/account/entry-option/entry-option.component.css
+++ b/Web/src/app/components/account/entry-option/entry-option.component.css
@@ -8,3 +8,19 @@
     font-size: 26px;
     font-weight: 300
 }
+
+.registration-description{
+    font-size: 12px;
+}
+
+
+li{
+    margin-bottom: 12px;
+}
+
+.separator{
+    display: block;
+    height: 212px;
+    width: 1px;
+    background-color: #808080;
+}
