--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
@@ -57,9 +57,7 @@
     background-color: #000000;
     font-size: 8.5px;
     font-weight: 300;
-    line-height: 2.06;
-    letter-spacing: 0.2px;
-    border-bottom: solid 0.2px #959595;
+    border-bottom: solid 1px #95959544;
     padding: 14px 20px 11px;
 }
 
