--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
@@ -41,6 +41,10 @@
     font-family: 'Gilroy'
 }
 
+.mat-table {
+    background-color: #151515 !important;
+}
+
 .recommendation-table .mat-header-row{
     height: 44px;
 }
