--- a/Web/src/app/components/account/change-password/change-password.component.html
+++ b/Web/src/app/components/account/change-password/change-password.component.html
@@ -1,3 +1,6 @@
+<div class="div-padding-bottom" fxLayout="column" fxLayoutAlign="space-evenly center">
+  <p class="subtitle">Please enter a different password consisting of at least 8 characters.</p>
+</div>
 <div fxLayout="column" fxLayoutAlign="space-evenly center">
   <inheritance-input #CurrentPassword [options]="getCurrentPasswordOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
     [value]="changePasswordRequest.currentPassword" (onChange)="changePasswordRequest.currentPassword = $event"></inheritance-input>
