--- a/Web/src/app/components/account/configuration/configuration.component.html
+++ b/Web/src/app/components/account/configuration/configuration.component.html
@@ -1,9 +1,9 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center">
-    <inheritance-input #Wallet [options]="getWalletOptions()" [value]="wallet" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"></inheritance-input>
+    <inheritance-input #Wallet [options]="getWalletOptions()" [value]="wallet" class="input-modal"></inheritance-input>
     <a class="modal-link" (click)="setNewWallet()">Set a new wallet</a>
 </div>
 <div class="div-separation" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
-    <p>Receive an email notification when a new recommendation is sent by some expert or asset that you are following.</p>
+    <p class="subtitle">Receive an email notification when a new recommendation is sent by some expert or asset that you are following.</p>
     <mat-checkbox required [(ngModel)]="configurationRequest.allowNotifications">Allow notifications</mat-checkbox>
 </div>
 <div fxLayout="column" fxLayoutAlign="space-evenly center">
