--- a/Web/src/app/components/account/referral-details/referral-details.component.html
+++ b/Web/src/app/components/account/referral-details/referral-details.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
-  <p>You can share the follow link to people register using your referral code:</p>
-  <mat-form-field appearance="outline" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web">
+  <p class="subtitle">You can share the follow link to people register using your referral code</p>
+  <mat-form-field appearance="outline" class="input-modal">
     <mat-label>Referral Link</mat-label>
     <input matInput #Link placeholder="Referral Link" type="text" [(ngModel)]="link" readonly />
     <span matSuffix class="copy" (click)="copyClick()">Copy</span>
@@ -8,12 +8,12 @@
   </mat-form-field>
 </div>
 <div class="data-div" fxLayout="column" fxLayoutAlign="space-evenly center"  fxLayoutGap="15px">
-  <inheritance-input [options]="getReferralCodeOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+  <inheritance-input [options]="getReferralCodeOptions()" class="input-modal"
     [value]="code"></inheritance-input>
   
-  <div ngClass.xs="input-modal-mobile" ngClass.sm="table-tablet" ngClass.gt-sm="table-web" fxLayout="column" fxLayoutAlign="center start">
-    <span class="table-header bold" fxFlex="100">Earned</span>
-    <div class="div-status" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
+  <div class="table-earned" fxLayout="column" fxLayoutAlign="center start">
+    <span class="table-header" fxFlex="100">Earned</span>
+    <div class="div-status border-bottom" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
       <span class="table-status" fxFlex="50">Available</span>
       <div class="div-value" fxFlex="50" fxLayout="row" fxLayoutAlign="end center">{{available}}</div>
     </div>
@@ -22,9 +22,9 @@
       <div class="div-value" fxFlex="50" fxLayout="row" fxLayoutAlign="end center">{{pending}}</div>
     </div>
   </div>
-  <div ngClass.xs="input-modal-mobile" ngClass.sm="table-tablet" ngClass.gt-sm="table-web" fxLayout="column" fxLayoutAlign="center start">
-    <span class="table-header bold" fxFlex="100">Used</span>
-    <div class="div-status" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
+  <div class="table-used" fxLayout="column" fxLayoutAlign="center start">
+    <span class="table-header" fxFlex="100">Used</span>
+    <div class="div-status border-bottom" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
       <span class="table-status" fxFlex="50">Cashed Out</span>
       <div class="div-value" fxFlex="50" fxLayout="row" fxLayoutAlign="end center">{{cashedOut}}</div>
     </div>
