--- a/Web/src/app/components/advisor/become-advisor/become-advisor.component.html
+++ b/Web/src/app/components/advisor/become-advisor/become-advisor.component.html
@@ -1,27 +1,31 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="25px">
-  <p *ngIf="alreadySent" class="already-sent">Your request was already submitted and it still is been evaluated by Auctus team.<br/>You can edit your information.</p>
-  <p>Please fill the form to resquest to be an Expert</p>
+  <p *ngIf="alreadySent" class="subtitle already-sent">Your request was already submitted and it still is been evaluated by Auctus team.<br/>You can edit your information.</p>
+  <p class="subtitle">All our experts are go through an approval process to guarantee the highest degree of professionalism and ethic standards</p>
   <div class="file-container" ngClass.xs="file-container-mobile" ngClass.sm="file-container-tablet" ngClass.gt-sm="file-container-web"> 
     <div class="file-uploader">
       <file-uploader #FileUploadComponent></file-uploader>
     </div>
   </div>
 </div>
-<div class="form-div" fxLayout="column" fxLayoutAlign="space-evenly center">
-  <inheritance-input #Name [options]="getNameOptions()"  ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
-    [value]="requestToBeAdvisorRequest.name" (onChange)="requestToBeAdvisorRequest.name = $event"></inheritance-input>
-  <inheritance-input #Email [options]="getEmailOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
-    [value]="requestToBeAdvisorRequest.email" (onChange)="requestToBeAdvisorRequest.email = $event"></inheritance-input>
-  <inheritance-input *ngIf="isNewUser()"  #Password [options]="getPasswordOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
-    [value]="requestToBeAdvisorRequest.password" (onChange)="requestToBeAdvisorRequest.password = $event"></inheritance-input>
-  <inheritance-input #Description [options]="getDescriptionOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-experience-tablet" ngClass.gt-sm="input-experience-web"
-    [value]="requestToBeAdvisorRequest.description" (onChange)="requestToBeAdvisorRequest.description = $event"></inheritance-input>
-  <inheritance-input #Experience [options]="getExperienceOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-experience-tablet" ngClass.gt-sm="input-experience-web"
+<div class="form-div" fxLayout="column" fxLayoutAlign="center center">
+  <div class="form-row" fxLayout.lt-sm="column" fxLayout.gt-xs="row" fxLayoutGap.gt-xs="20px" fxLayoutAlign="center center" >
+    <inheritance-input #Email [options]="getEmailOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.gt-xs="input-modal-web"
+      [value]="requestToBeAdvisorRequest.email" (onChange)="requestToBeAdvisorRequest.email = $event"></inheritance-input>
+    <inheritance-input *ngIf="isNewUser()"  #Password [options]="getPasswordOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.gt-xs="input-modal-web"
+      [value]="requestToBeAdvisorRequest.password" (onChange)="requestToBeAdvisorRequest.password = $event"></inheritance-input>
+  </div>
+  <div class="form-row" fxLayout.lt-sm="column" fxLayout.gt-xs="row" fxLayoutGap.gt-xs="20px" fxLayoutAlign="center center" >
+    <inheritance-input #Name [options]="getNameOptions()" class="input-modal"  ngClass.xs="input-modal-mobile" ngClass.gt-xs="input-modal-web"
+      [value]="requestToBeAdvisorRequest.name" (onChange)="requestToBeAdvisorRequest.name = $event"></inheritance-input>
+    <inheritance-input #Description [options]="getDescriptionOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.gt-xs="input-modal-web"
+      [value]="requestToBeAdvisorRequest.description" (onChange)="requestToBeAdvisorRequest.description = $event"></inheritance-input>
+  </div>
+  <inheritance-input #Experience [options]="getExperienceOptions()" class="input-experience"
     [value]="requestToBeAdvisorRequest.previousExperience" (onChange)="requestToBeAdvisorRequest.previousExperience = $event"></inheritance-input>
 </div>
 <div class="last-div" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
-  <recaptcha *ngIf="isNewUser()" #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
   <mat-checkbox required [(ngModel)]="acceptTermsAndConditions">Agree with all terms</mat-checkbox>
+  <recaptcha *ngIf="isNewUser()" #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
   <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" 
     mat-flat-button (click)="onSubmit()" [promiseBtn]="promise">Submit</button>
 </div>
