--- a/Web/src/app/components/util/file-uploader/file-uploader.component.css
+++ b/Web/src/app/components/util/file-uploader/file-uploader.component.css
@@ -35,8 +35,10 @@
   .uploader .icon {
     font-size: 16px;
     display: block;
-    font-weight: 900;
+    font-weight: 300;
     text-align: center;
+    font-style: normal;
+    width: 90px;
   }
   
   .uploader img {
@@ -67,12 +69,16 @@
   }
 
   .close {
-      z-index: 2;
-      top: 0;
-      right: 0;
-      height: 10px;
-      width: 10px;
-      position: absolute;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 10px;
+    color: rgba(15, 15, 15, 0.5);
   }
 
   .empty-img {
