Request denied adjusment

--- a/Web/src/app/components/admin/advisors-requests/advisors-requests.component.css
+++ b/Web/src/app/components/admin/advisors-requests/advisors-requests.component.css
@@ -1,3 +1,8 @@
+:host{
+    background: #EEEEEE;
+    display: flow-root;
+}
+
 .content{
     display:block;
     margin:20px;
@@ -7,3 +12,4 @@ label{
     color: gray;
     font-size: 12px;
 }
+
